--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
+    "heic2any": "^0.0.4",
     "image-size": "1.0.0",
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
