--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
+    "next-with-workbox": "^3.0.5",
     "pliny": "0.2.1",
     "postcss": "^8.4.24",
     "react": "18.3.1",
@@ -45,7 +46,11 @@
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
     "tailwindcss": "^3.4.3",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0",
+    "workbox-window": "^7.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
