--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.3",
     "unist-util-visit": "^5.0.0",
     "workbox-precaching": "^7.1.0",
