--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@types/dom-view-transitions": "^1.0.5",
     "@types/mdx": "^2.0.12",
     "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "cross-env": "^7.0.3",
