--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@umami/api-client": "^0.69.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "@waline/client": "^3.3.0",
