--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "@waline/client": "^3.3.0",
+    "algoliasearch": "^5.2.4",
     "autoprefixer": "^10.4.13",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
