--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
+    "next-view-transitions": "^0.3.2",
     "next-with-workbox": "^3.0.5",
     "pliny": "0.2.1",
     "postcss": "^8.4.24",
