--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/dom-view-transitions": "^1.0.5",
     "@types/mdx": "^2.0.12",
     "@types/react": "^18.2.73",
